<resources>
    <string name="app_name">AMS Tuck Shop</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="ams_tuck_shop">AMS Tuck Shop</string>
    <string name="sign_in_button">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="txtCredits"><a href="https://www.al-madinah.school.nz/canteen/" />Al-Madinah School</string>
    <string name="tuck_shop">Today</string>
    <string name="menu_title">AL-MADINAH SCHOOL</string>
    <string name="nav_tuck_shop">Tuck Shop</string>
    <string name="title_activity_cart">Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_home">HOME</string>
    <string name="nav_cart">CART</string>
    <string name="nav_order_history">ORDER HISTORY</string>
    <string name="nav_profile">PROFILE</string>
    <string name="HELP">HELP</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="welcome_splash">Welcome</string>

</resources>