<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_cart"
            android:title="@string/nav_cart"
            android:icon="@drawable/cart_icon"/>

        <item
            android:id="@+id/nav_order"
            android:title="@string/nav_order_history"
            android:icon="@drawable/order_icon"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/profile_icon"/>
    </group>

    <item android:title="Settings">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:title="@string/HELP"
                    android:icon="@drawable/help"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/LOGOUT"
                    android:icon="@drawable/logout"/>
            </group>

        </menu>
    </item>


</menu>