<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/home_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_background"
        android:theme="@style/navigationTheme"
        android:layout_gravity= "start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/home_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:layout_marginStart="170dp"
                android:layout_marginEnd="24dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                tools:layout_editor_absoluteX="301dp"
                tools:layout_editor_absoluteY="32dp"
                android:layout_marginStart="290dp"
                android:layout_marginEnd="24dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="172dp"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="49dp"
                android:paddingTop="100dp"
                android:text="@string/email"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/logout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="15dp"
                android:paddingTop="50dp"
                android:text="@string/tuck_shop"
                android:textAllCaps="false"
                android:textSize="34sp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="107dp" />

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="104dp"
                android:paddingTop="15dp"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:srcCompat="@drawable/menu_icon"
                tools:layout_editor_absoluteY="32dp" />


        </RelativeLayout>
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>